argocd/eoepca/iam/parts/ingress-pathbased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: iam-pathbased-temp
  namespace: ingress-apisix
spec:
  ingressClassName: nginx
  rules:
    - host: ngx.develop.eoepca.org
      http:
        paths:
          - backend:
              service:
                name: apisix-gateway
                port:
                  number: 80
            path: /iam/
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - ngx.develop.eoepca.org
      secretName: ngx.develop.eoepca.org-tls
